// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bar 1`] = `
<div>
  <div
    class="barchart-wrapper"
    style="width: 90%; margin: auto; position: relative;"
  >
    <svg
      class="barChart"
      height="190.05"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(125, 0.05)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(169.95px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(56.951612903225815,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(113.40322580645163,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(169.8548387096774,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(226.30645161290326,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(282.7580645161291,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(339.2096774193548,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,6
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,17.534523809523805)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,44.51071428571428)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,71.48690476190475)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Nasjonalt
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,98.46309523809522)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,125.4392857142857)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,152.41547619047617)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 3
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="169.95"
            opacity="0.2"
            width="112.90322580645163"
            x="0"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="169.95"
            opacity="0.2"
            width="56.45161290322578"
            x="112.90322580645163"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="169.95"
            opacity="0.2"
            width="180.6451612903226"
            x="169.3548387096774"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-Sykehus 5"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="286.8306451612903"
            x="0"
            y="8.092857142857142"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 2"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="230.3790322580645"
            x="0"
            y="35.069047619047616"
          />
          <rect
            class="bar"
            data-testid="bar-Nasjonalt"
            fill="#00263D"
            height="18.88333333333333"
            opacity="1"
            width="190.86290322580643"
            x="0"
            y="62.04523809523809"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 4"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="173.9274193548387"
            x="0"
            y="89.02142857142856"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 1"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="117.4758064516129"
            x="0"
            y="115.99761904761904"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 3"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="61.024193548387096"
            x="0"
            y="142.9738095238095"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-Sykehus 5"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="302.8306451612903"
            y="20.534523809523805"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 2"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="246.3790322580645"
            y="47.51071428571428"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Nasjonalt"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="206.86290322580643"
            y="74.48690476190475"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 4"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="189.9274193548387"
            y="101.46309523809522"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 1"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="133.4758064516129"
            y="128.4392857142857"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 3"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="77.0241935483871"
            y="155.41547619047617"
          >
            0
          </text>
        </g>
      </g>
    </svg>
    <img
      src="/img/logos/logo-skde-graa.svg"
      style="position: relative; left: 88%; top: 0px;"
      width="33.333333333333336"
    />
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
      style="position: relative; left: 13%; top: -32px; width: fit-content;"
    >
      Kilde: Norsk medisinsk kvalitetsregister for test
    </h6>
  </div>
</div>
`;

exports[`Bar select treatment unit 1`] = `
<div>
  <div
    class="barchart-wrapper"
    style="width: 90%; margin: auto; position: relative;"
  >
    <svg
      class="barChart"
      height="220.05"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(125, 0.05)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(199.95px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-199.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(70.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-199.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(140.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-199.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(210.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-199.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(280.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-199.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(350.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-199.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100 %
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,17.803767123287663)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              RHF 1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,45.194178082191776)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,72.58458904109588)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,99.975)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Nasjonalt
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.3654109589041)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,154.7558219178082)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,182.1462328767123)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 3
            </text>
          </g>
        </g>
        <g
          class="levels"
        />
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-RHF 1"
            fill="#7EBEC7"
            height="19.173287671232874"
            opacity="1"
            width="233.10000000000002"
            x="0"
            y="8.217123287671228"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 5"
            fill="#7EBEC7"
            height="19.173287671232874"
            opacity="0.5"
            width="177.835"
            x="0"
            y="35.60753424657534"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 2"
            fill="#7EBEC7"
            height="19.173287671232874"
            opacity="0.5"
            width="142.835"
            x="0"
            y="62.997945205479446"
          />
          <rect
            class="bar"
            data-testid="bar-Nasjonalt"
            fill="#00263D"
            height="19.173287671232874"
            opacity="1"
            width="118.33500000000001"
            x="0"
            y="90.38835616438355"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 4"
            fill="#7EBEC7"
            height="19.173287671232874"
            opacity="0.5"
            width="107.835"
            x="0"
            y="117.77876712328766"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 1"
            fill="#7EBEC7"
            height="19.173287671232874"
            opacity="1"
            width="72.83500000000001"
            x="0"
            y="145.16917808219176"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 3"
            fill="#7EBEC7"
            height="19.173287671232874"
            opacity="0.5"
            width="37.835"
            x="0"
            y="172.55958904109588"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-RHF 1"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="249.10000000000002"
            y="20.803767123287663"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 5"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="193.835"
            y="48.194178082191776"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 2"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="158.835"
            y="75.58458904109588"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Nasjonalt"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="134.335"
            y="102.975"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 4"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="123.835"
            y="130.3654109589041"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 1"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="88.83500000000001"
            y="157.7558219178082"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 3"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="53.835"
            y="185.1462328767123"
          >
            0
          </text>
        </g>
      </g>
    </svg>
    <img
      src="/img/logos/logo-skde-graa.svg"
      style="position: relative; left: 88%; top: 0px;"
      width="33.333333333333336"
    />
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
      style="position: relative; left: 13%; top: -32px; width: fit-content;"
    >
      Kilde: Norsk medisinsk kvalitetsregister for test
    </h6>
  </div>
</div>
`;

exports[`Bar with level_direction eq 0 1`] = `
<div>
  <div
    class="barchart-wrapper"
    style="width: 90%; margin: auto; position: relative;"
  >
    <svg
      class="barChart"
      height="190.05"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(125, 0.05)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(169.95px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(56.951612903225815,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(113.40322580645163,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(169.8548387096774,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(226.30645161290326,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(282.7580645161291,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(339.2096774193548,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-169.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,6
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,17.534523809523805)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,44.51071428571428)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,71.48690476190475)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Nasjonalt
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,98.46309523809522)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,125.4392857142857)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,152.41547619047617)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 3
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="169.95"
            opacity="0.2"
            width="112.90322580645163"
            x="0"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="169.95"
            opacity="0.2"
            width="56.45161290322578"
            x="112.90322580645163"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="169.95"
            opacity="0.2"
            width="180.6451612903226"
            x="169.3548387096774"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-Sykehus 5"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="286.8306451612903"
            x="0"
            y="8.092857142857142"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 2"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="230.3790322580645"
            x="0"
            y="35.069047619047616"
          />
          <rect
            class="bar"
            data-testid="bar-Nasjonalt"
            fill="#00263D"
            height="18.88333333333333"
            opacity="1"
            width="190.86290322580643"
            x="0"
            y="62.04523809523809"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 4"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="173.9274193548387"
            x="0"
            y="89.02142857142856"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 1"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="117.4758064516129"
            x="0"
            y="115.99761904761904"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 3"
            fill="#7EBEC7"
            height="18.88333333333333"
            opacity="1"
            width="61.024193548387096"
            x="0"
            y="142.9738095238095"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-Sykehus 5"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="302.8306451612903"
            y="20.534523809523805"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 2"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="246.3790322580645"
            y="47.51071428571428"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Nasjonalt"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="206.86290322580643"
            y="74.48690476190475"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 4"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="189.9274193548387"
            y="101.46309523809522"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 1"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="133.4758064516129"
            y="128.4392857142857"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 3"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="77.0241935483871"
            y="155.41547619047617"
          >
            0
          </text>
        </g>
      </g>
    </svg>
    <img
      src="/img/logos/logo-skde-graa.svg"
      style="position: relative; left: 88%; top: 0px;"
      width="33.333333333333336"
    />
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
      style="position: relative; left: 13%; top: -32px; width: fit-content;"
    >
      Kilde: Norsk medisinsk kvalitetsregister for test
    </h6>
  </div>
</div>
`;

exports[`Bar, fetch is loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`Bar, fetch with error 1`] = `
<div>
  An error has occured: 
</div>
`;

exports[`Line 1`] = `
<div>
  <div
    class="linechart-wrapper"
    style="width: 90%; margin: auto; position: relative;"
  >
    <svg
      class="lineChart"
      height="322"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(25, 8)"
      >
        <g
          class="legendItem Nasjonalt"
          opacity="1"
          transform="translate(0,0)"
        >
          <text
            dy="0.35em"
            fill="#2D3034"
            font-size="0.9rem"
            text-anchor="start"
            x="0"
            y="0"
          >
             
            Nasjonalt
          </text>
          <line
            stroke-linecap="round"
            stroke-width="4"
            x1="0"
            y1="15"
            y2="15"
          />
        </g>
      </g>
      <g
        transform="translate(25, 38)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 208)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <text
              dy="0.71em"
              fill="#828586"
              style="font-size: 16.075px;"
              y="21.64"
            >
              2016
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(135.5,0)"
          >
            <text
              dy="0.71em"
              fill="#828586"
              style="font-size: 16.075px;"
              y="21.64"
            >
              2017
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(270.5,0)"
          >
            <text
              dy="0.71em"
              fill="#828586"
              style="font-size: 16.075px;"
              y="21.64"
            >
              2018
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(405.5,0)"
          >
            <text
              dy="0.71em"
              fill="#828586"
              style="font-size: 16.075px;"
              y="21.64"
            >
              2019
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="start"
        >
          <text
            fill="#2D3034"
            style="font-size: 15.1px;"
            transform="rotate(-90)"
            x="-138.66666666666666"
            y="465.74999999999994"
          >
            Antall
          </text>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,170.29591836734693)"
          >
            <line
              stroke="#D2D3D4"
              x2="405"
            />
            <text
              dy="0.32em"
              fill="#828586"
              style="font-size: 12.16px;"
              x="408"
            >
              0,1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.84693877551021)"
          >
            <line
              stroke="#D2D3D4"
              x2="405"
            />
            <text
              dy="0.32em"
              fill="#828586"
              style="font-size: 12.16px;"
              x="408"
            >
              0,2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,85.39795918367346)"
          >
            <line
              stroke="#D2D3D4"
              x2="405"
            />
            <text
              dy="0.32em"
              fill="#828586"
              style="font-size: 12.16px;"
              x="408"
            >
              0,3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,42.94897959183673)"
          >
            <line
              stroke="#D2D3D4"
              x2="405"
            />
            <text
              dy="0.32em"
              fill="#828586"
              style="font-size: 12.16px;"
              x="408"
            >
              0,4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,0.5)"
          >
            <line
              stroke="#D2D3D4"
              x2="405"
            />
            <text
              dy="0.32em"
              fill="#828586"
              style="font-size: 12.16px;"
              x="408"
            >
              0,5
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="80.65306122448979"
            opacity="0.2"
            width="405"
            x="0"
            y="127.34693877551021"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="42.448979591836746"
            opacity="0.2"
            width="405"
            x="0"
            y="84.89795918367346"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="84.89795918367346"
            opacity="0.2"
            width="405"
            x="0"
            y="0"
          />
        </g>
        <g
          class="linesComplete"
        >
          <path
            class="line"
            d="M270,123.909L135,39.011L0,177.861"
            fill="none"
            opacity="1"
            style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
          />
        </g>
        <g
          class="linesIncomplete"
        >
          <path
            class="line"
            d="M405,166.358L270,123.909"
            fill="none"
            opacity="1"
            style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
          />
        </g>
        <g
          class="dots"
        >
          <circle
            class="dot"
            cx="405"
            cy="166.35755102040815"
            opacity="1"
            r="4"
            style="mix-blend-mode: multiply;"
          />
          <circle
            class="dot"
            cx="270"
            cy="123.9085714285714"
            opacity="1"
            r="4"
            style="mix-blend-mode: multiply;"
          />
          <circle
            class="dot"
            cx="135"
            cy="39.01061224489794"
            opacity="1"
            r="4"
            style="mix-blend-mode: multiply;"
          />
          <circle
            class="dot"
            cx="0"
            cy="177.86122448979592"
            opacity="1"
            r="4"
            style="mix-blend-mode: multiply;"
          />
        </g>
      </g>
    </svg>
    <img
      height="18.51851851851852"
      src="/img/logos/logo-skde-graa.svg"
      style="position: relative; left: 77%; width: auto; bottom: 335px;"
    />
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
      style="position: relative; left: 3%; top: -30px; width: fit-content;"
    >
      Kilde: Norsk medisinsk kvalitetsregister for test
    </h6>
  </div>
</div>
`;

exports[`Line, fetch is loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`Line, fetch with error 1`] = `
<div>
  An error has occured: 
</div>
`;
